src/test/deca/context/invalid/decl_method_not_subtype.deca
// Test la règle (2.7) : la classe enfant override une méthode parente,
// mais ne renvoie pas le même type

class A  {
    void displayHello(){
        println("Hello");
    }
}

class B extends A {
    int displayHello(){
        return 5;
    }
}

// Resultat:
//# src/test/deca/context/invalid/decl_method_not_subtype.deca:11:4: Redéfinition de méthode invalide : rule 2.7
